# seneca-solver

./: .devcontainer.json  .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md  build.sh  key_extractor.js  seneca-solver.py
old_python_version/: seneca-solver.py  seneca-solver.spec
python_version/: seneca-solver.py
src/: main.rs  seneca_client.rs  utils.rs
